[gd_scene load_steps=2 format=3 uid="uid://47vnw2n68kqv"]

[ext_resource type="Script" uid="uid://bjuiuessjvw8f" path="res://NetworkingTest/NetworkManager.gd" id="1_w8amq"]

[node name="HostNetworking" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -2.0
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w8amq")

[node name="HostBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 20.0
offset_right = 102.0
offset_bottom = 51.0
text = "Host"

[node name="JoinBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 119.0
offset_top = 21.0
offset_right = 202.0
offset_bottom = 52.0
text = "Join"

[node name="StartBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 228.0
offset_top = 22.0
offset_right = 311.0
offset_bottom = 53.0
text = "Start"

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 115.0
offset_right = 198.0
offset_bottom = 162.0

[connection signal="button_down" from="HostBtn" to="." method="_on_host_button_down"]
[connection signal="button_down" from="JoinBtn" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartBtn" to="." method="_on_start_button_down"]
